<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C87ED"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="68dp"
        android:layout_height="19dp"
        android:layout_marginTop="144dp"
        android:text="TextView"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="257dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="68dp"
        android:layout_height="19dp"
        android:layout_marginTop="112dp"
        android:text="TextView"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="257dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="68dp"
        android:layout_height="19dp"
        android:text="TextView"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="146dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="68dp"
        android:layout_height="19dp"
        android:text="TextView"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="112dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="239dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_categories"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="78dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="54dp"
        android:layout_height="37dp"
        android:background="#3C87ED"
        android:contentDescription="@string/arrow"
        android:tint="#FFFFFF"
        app:srcCompat="?android:attr/actionModeCloseDrawable"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="510dp"
        android:layout_marginTop="192dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/create_category"
            android:textSize="25dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="338dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:hint="hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="338dp"
                android:layout_height="wrap_content"
                android:hint="hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="300dp">
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button"
                app:layout_column="3"
                app:layout_row="0" />
        </androidx.gridlayout.widget.GridLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="400dp"
            android:background="@android:drawable/ic_input_add"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_input_add" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
